<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="48dp"
        >

        <!-- Título -->
        <TextView
            android:id="@+id/paymentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_pago"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_marginBottom="16dp" />

        <!-- Mostrar total -->
        <TextView
            android:id="@+id/paymentTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_a_pagar_0_00"
            android:textSize="18sp"
            android:textColor="@color/text_secondary"
            android:layout_marginBottom="24dp" />

        <!-- Nombre del usuario -->
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <!-- Número de tarjeta -->
        <EditText
            android:id="@+id/edtCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_tarjeta"
            android:inputType="number"
            android:layout_marginBottom="16dp" />

        <!-- Fecha de expiración -->
        <EditText
            android:id="@+id/edtExpiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mm_aa"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <!-- CVV -->
        <EditText
            android:id="@+id/edtCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:inputType="numberPassword"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnConfirmPayment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/confirmar_pago"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>
