<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="32dp"
    android:paddingVertical="9dp">

    <ImageView
        android:id="@+id/gameImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/gameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game1_title"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gameDescription"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/game1_desc"
            android:textColor="#757575"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buyButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            app:backgroundTint="#7E57C2"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/buy"
            android:textColor="#FFFFFF"
             />

    </LinearLayout>

</LinearLayout>